protocolmodel/mcrl2/testing/errors/error_1006.mcf
% E1006 - Unrecognized OOB message identifier
[true* . LOG_ERROR(E1006)] false